force-app/main/default/objects/Hazard_Signal__c/Hazard_Signal__c.object-meta.xml
<CustomObject>
    <description>Flash-Flood Early-Warning PoC. Stores one geophysical hazard observation per real-world event/location ingested from public live data sources (USGS, GDACS) and the external ML precursor model.</description>
    <label>Hazard Signal</label>
    <nameField>
        <displayFormat>HS-{00000}</displayFormat>
        <label>Hazard Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hazard Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>