force-app/main/default/objects/Hazard_Signal__c/fields/Alert_Phase__c.field-meta.xml
<CustomField>
    <fullName>Alert_Phase__c</fullName>
    <description>Where in the event lifecycle this signal sits. Precursor = detected days in advance; Impact = detected during/after the disaster.</description>
    <label>Alert Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Precursor</fullName>
            </value>
            <value>
                <fullName>Imminent</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Post_Event</fullName>
                <label>Post-Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>