force-app/main/default/objects/Hazard_Signal__c/fields/Baseline_Value__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Value__c</fullName>
    <description>Reference/baseline value used to compute change.</description>
    <label>Baseline Value</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>