force-app/main/default/objects/Hazard_Signal__c/fields/Change_Percent__c.field-meta.xml
<CustomField>
    <fullName>Change_Percent__c</fullName>
    <description>Percent change of observed vs baseline value.</description>
    <label>Change Percent</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>