force-app/main/default/objects/Hazard_Signal__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <description>Continent of the monitored region that produced this signal.</description>
    <label>Continent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>