force-app/main/default/objects/Hazard_Signal__c/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <description>When this signal was detected/ingested into Salesforce.</description>
    <label>Detected At</label>
    <type>DateTime</type>
</CustomField>