force-app/main/default/objects/Hazard_Signal__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of geophysical hazard event.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Landslide</fullName>
            </value>
            <value>
                <fullName>Glacier_Change</fullName>
                <label>Glacier Change</label>
            </value>
            <value>
                <fullName>Glacial_Lake_Change</fullName>
                <label>Glacial Lake Change</label>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>