force-app/main/default/objects/Hazard_Signal__c/fields/Lead_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Hours__c</fullName>
    <description>Estimated hours until impact. Positive = advance warning; 0 or negative = event already occurring/occurred.</description>
    <label>Lead Time (Hours)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>