force-app/main/default/objects/Hazard_Signal__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Human-readable place description from the source.</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>