force-app/main/default/objects/Hazard_Signal__c/fields/ML_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>ML_Last_Run__c</fullName>
    <description>Timestamp of the last ML inference run for this signal.</description>
    <label>ML Last Run</label>
    <type>DateTime</type>
</CustomField>