force-app/main/default/objects/Hazard_Signal__c/fields/ML_Output__c.field-meta.xml
<CustomField>
    <fullName>ML_Output__c</fullName>
    <description>Cached response from the external Gradio ML model.</description>
    <label>ML Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>