force-app/main/default/objects/Hazard_Signal__c/fields/Notified__c.field-meta.xml
<CustomField>
    <fullName>Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True once a public/responder alert has been dispatched for this signal, to avoid duplicate notifications.</description>
    <label>Alert Notified</label>
    <type>Checkbox</type>
</CustomField>