force-app/main/default/objects/Hazard_Signal__c/fields/Observation_Time__c.field-meta.xml
<CustomField>
    <fullName>Observation_Time__c</fullName>
    <description>Timestamp of the observation reported by the source.</description>
    <label>Observation Time</label>
    <type>DateTime</type>
</CustomField>