force-app/main/default/objects/Hazard_Signal__c/fields/Observed_Value__c.field-meta.xml
<CustomField>
    <fullName>Observed_Value__c</fullName>
    <description>Measured value from source (e.g. magnitude, lake area km2, depth change m).</description>
    <label>Observed Value</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>