force-app/main/default/objects/Hazard_Signal__c/fields/Predicted_Impact_Window__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Impact_Window__c</fullName>
    <description>Estimated flood/impact arrival time for Precursor/Imminent phase signals.</description>
    <label>Predicted Impact Window</label>
    <type>DateTime</type>
</CustomField>