force-app/main/default/objects/Hazard_Signal__c/fields/Primary_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_URL__c</fullName>
    <description>Canonical link to open this event in the source system.</description>
    <label>Primary Source URL</label>
    <type>Url</type>
</CustomField>