force-app/main/default/objects/Hazard_Signal__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Name of the configured monitored region (Hazard_Region__mdt) this signal falls within.</description>
    <label>Monitored Region</label>
    <length>120</length>
    <type>Text</type>
</CustomField>