force-app/main/default/objects/Hazard_Signal__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Numeric 0-100 score driving Risk Level.</description>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>