force-app/main/default/objects/Hazard_Signal__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Unique external id from the source system. Used for idempotent upsert to avoid duplicate alerts.</description>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>180</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>