force-app/main/default/objects/Hazard_Signal__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Public data source that produced this hazard signal.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USGS</fullName>
            </value>
            <value>
                <fullName>GDACS</fullName>
            </value>
            <value>
                <fullName>NASA_LHASA</fullName>
                <label>NASA LHASA</label>
            </value>
            <value>
                <fullName>Copernicus</fullName>
            </value>
            <value>
                <fullName>ICIMOD</fullName>
            </value>
            <value>
                <fullName>ML_Model</fullName>
                <label>ML Model</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>