force-app/main/default/objects/Hazard_Signal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Alert_Phase__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>