force-app/main/default/objects/Hazard_Signal__c/listViews/Critical_Active.listView-meta.xml
<ListView>
    <fullName>Critical_Active</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Alert_Phase__c</columns>
    <columns>Lead_Time_Hours__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Detected_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Risk_Level__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </filters>
    <label>Critical - Active</label>
</ListView>