force-app/main/default/objects/Hazard_Signal__c/listViews/High_And_Critical.listView-meta.xml
<ListView>
    <fullName>High_And_Critical</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Alert_Phase__c</columns>
    <columns>Lead_Time_Hours__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Continent__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Risk_Level__c</field>
        <operation>notEqual</operation>
        <value>Low,Medium</value>
    </filters>
    <label>High &amp; Critical</label>
</ListView>