force-app/main/default/objects/Hazard_Signal__c/listViews/Impact_Now.listView-meta.xml
<ListView>
    <fullName>Impact_Now</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Observation_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alert_Phase__c</field>
        <operation>equals</operation>
        <value>Impact</value>
    </filters>
    <label>Impact - Now</label>
</ListView>