force-app/main/default/objects/Hazard_Signal__c/listViews/Precursor_Warnings.listView-meta.xml
<ListView>
    <fullName>Precursor_Warnings</fullName>
    <columns>NAME</columns>
    <columns>Event_Type__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Lead_Time_Hours__c</columns>
    <columns>Predicted_Impact_Window__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Alert_Phase__c</field>
        <operation>equals</operation>
        <value>Precursor</value>
    </filters>
    <filters>
        <field>Risk_Level__c</field>
        <operation>notEqual</operation>
        <value>Low,Medium</value>
    </filters>
    <label>Precursor Warnings (Days Ahead)</label>
</ListView>